Fix light/dark mode css, default dark

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -100,3 +100,10 @@
       z-index: 1;
     }
 }
+
+@media (prefers-color-scheme: light) {
+  .title a, 
+  .title span {
+      background-color: #111;
+  }
+}
