--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #000;
-
+    color: rgb(250, 255, 250);
 }
 .nav__menu_bar{
     display: flex;
@@ -32,7 +32,7 @@
     padding: 24px 16px;
     transition: all 0.2s;
     min-height: calc(100vh - 50px);
-    background-color: #000;
+    background-color: inherit;
 }
 .nav__menu_list.active{
     right: 0;
